# NanoForge

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
nanoforge/: .gitignore  Cargo.toml  README.md  demo_functions.nf  fib.nf  iter_fib.nf  matmul_stress.nf  recursion.nf  simple_add.nf  test_add.nf  test_add_reg.nf  test_arg.nf  test_arg2.nf  test_arg3.nf  test_arg_check.nf  test_control.nf  test_inc.nf  test_mov.nf  test_neg.nf  test_opt.nf  test_press.nf  test_r12.nf  test_simple.nf  test_sub.nf  test_sum.nf  variable_load.nf  vec_add.nf  vec_add_large.nf  vec_add_stress.nf  vectors.nf
nanoforge/examples/: demo.py  evolve_demo.py  numpy_demo.py
nanoforge/fuzz/: Cargo.toml
nanoforge/fuzz/fuzz_targets/: daemon_protocol.rs
nanoforge/include/: nanoforge.h
nanoforge/src/: ai_optimizer.rs  array_ops.rs  assembler.rs  benchmark.rs  benchmarker.rs  compiler.rs  cpu_features.rs  error.rs  evolution.rs  ffi.rs  hot_function.rs  ir.rs  jit_memory.rs  lib.rs  main.rs  mutator.rs  optimizer.rs  parser.rs  profiler.rs  protocol.rs  pybindings.rs  safety.rs  sandbox.rs  thread_safe.rs  validator.rs  variant_generator.rs
nanoforge/src/assembler/: aarch64.rs  avx512.rs  manual_test.rs  mod.rs  x64.rs
nanoforge/tests/: integration.rs
nanoforge/tests/programs/: test_control.nf  test_ops.nf
scripts/: setup_permissions.sh
