[package]
name = "nanoforge-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nanoforge]
path = ".."

[[bin]]
name = "daemon_protocol"
path = "fuzz_targets/daemon_protocol.rs"
test = false
doc = false
bench = false
